TOK/TG: Fix: checkboxes and radio buttons are little and blurry
Fixes https://github.com/mate-desktop/mate-themes/issues/213

--- a/desktop-themes/TraditionalGreen/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/TraditionalGreen/gtk-3.0/gtk-widgets.css
@@ -2758,8 +2758,8 @@ check:disabled,
 radio:disabled {
     background-color: transparent;
     border-style: none;
-    min-height: 13px;
-    min-width: 13px;
+    min-height: 16px;
+    min-width: 16px;
 }
 
 check,
